--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -11,10 +11,37 @@
 </head>
 <body>
     {% block navbar %}
-    {% endblock %}
+<header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./showAllArticle">Article</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./addArticle">Nouvelle Article</a>
+                    </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+</header>
 
+{% endblock %}
     {% block content %}
     {% endblock %}
 
     {% block footer %}
-    {% endblock %}
+<footer>
+
+    
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</body>
+</html>
+{% endblock %}
